Added .ipynb file for resubmission
Corrected minor typo and ready for resubmission.

--- a/MLND/titanic_survival_exploration/report.html
+++ b/MLND/titanic_survival_exploration/report.html
@@ -13227,7 +13227,7 @@ Make sure to keep track of the various features and conditions you tried before 
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Answer</strong>: <em>Election result as outcome variable, Democrat or rRepublican. Features could be age, sex, occupation, region of voters.</em></p>
+<p><strong>Answer</strong>: <em>Election result as outcome variable, Democrat or Republican. Features could be age, sex, occupation, region of voters.</em></p>
 
 </div>
 </div>
