Elaborated an answer
Elaborated an answer for question 5 as requested by reviewer.

--- a/MLND/titanic_survival_exploration/report.html
+++ b/MLND/titanic_survival_exploration/report.html
@@ -13227,7 +13227,8 @@ Make sure to keep track of the various features and conditions you tried before 
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Answer</strong>: <em>Election result as outcome variable, Democrat or Republican. Features could be age, sex, occupation, region of voters.</em></p>
+<p><strong>Answer</strong>: <em>A scenario where supervised learning can be applied,
+The result of the presidential election as a whole can be predicted, whether the Republican candidate or the Democratic candidate could win. The end election result, whom to become president as an outcome variable for our machine learning algorithm and the features could be age, sex, occupation, income, state (region) of all individual voters who have voted in the presidential election.</em></p>
 
 </div>
 </div>
